<resources>
    <string name="app_name">Root &amp; Leaf</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="hero_text">The best\napp for\nyour plants</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_subtitle">Login to your account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="email_hint">user@gmail.com</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="create_account_subtitle">Create your new account</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_account">Don\'t have an account? Sign up</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="hi_user">Hi Enola,</string>
    <string name="good_morning">Good Morning!</string>
    <string name="home_title">Select your plants\nfor Hydroponics!</string>
    <string name="notification_days">14 Days</string>
    <string name="notification_text">Check your basil plants!\nToday watering &amp; ready 2 week for harvest</string>
    <string name="basil_plants">Basil Plants</string>
    <string name="basil_scientific">(Ocimum Basilicum)</string>
    <string name="recommendation">Recommendation</string>
    <string name="lettuce">Lettuce</string>
    <string name="lettuce_scientific">(Lactuca Sativa)</string>
    <string name="found">Found</string>
    <string name="results_count">10 Results</string>
    <string name="results_format">%1$d Results</string>
    <string name="cart">Cart</string>
    <string name="promo_code">Promo Code</string>
    <string name="apply">Apply</string>
    <string name="sub_total">Sub total</string>
    <string name="total">Total</string>
    <string name="place_order">Place to Order</string>
    <string name="checkout">Checkout</string>
    <string name="shipping_to">Shipping to</string>
    <string name="home">Home</string>
    <string name="home_address">(973) 876-765\nSaskia Villa, Haldispanj</string>
    <string name="payment_method">Payment Method</string>
    <string name="credit_card">Credit card</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="cash_icon_desc">Cash Icon</string>
    <string name="order_track">OrderTrack</string>
    <string name="on_the_way">On the way</string>
    <string name="order_confirmed">Order confirmed</string>
    <string name="received_order">We have received your order</string>
    <string name="order_confirmation_title">Order\nConfirmation!</string>
    <string name="order_confirmation_text">Your order has been placed successfully!\nWe\'ll notify you when it\'s on the way.</string>
    <string name="order_on_the_way">Your order is on the way!</string>
    <string name="rate">Rate</string>
    <string name="order_again">Order Again</string>
    <string name="spec_height">Height\n30cm-40cm</string>
    <string name="total_price">Total Price</string>
    <string name="checkout_amount">Checkout AED 60</string>
    <string name="plant_description">Plants make your life with minimal and happy love the plants more and enjoy life</string>
    <string name="lorem_rissum">Lorem Rissum</string>
    <string name="lucky_jade">Lucky-jade-plant</string>
    <string name="outdoor_plants">Outdoor Plants</string>
    <string name="indoor_plants">Indoor Plants</string>
    <string name="plant_care">Plant Care</string>
</resources>